# BigDataTeam

./: .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yaml  tests.yaml
src/bigdatateam/: code.py
tests/: test_code.py
