[project]
name = "BigDataTeam"
version = "0.1.0"
description = "homework"
authors = [
    {name = "musralina", email = "a.musralina@gmail.com"},
]
dependencies = [
    "pip>=24.2",
    "ruff>=0.6.9",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
show-fixes = true
line-length = 120

